# nqn-hackathon-2023

./: .buildinfo  .gitignore  .pre-commit-config.yaml  README.md  environment.yml  example_notebook.html  genindex.html  intro.html  local-hello-world-qiskit-ionq.html  objects.inv  project_introduction.html  pyproject.toml  quantum_simulation_basics.html  search.html  searchindex.js
.doctrees/: Circuit.doctree  environment.pickle  example_notebook.doctree  intro.doctree  local-hello-world-qiskit-ionq.doctree  project_introduction.doctree  quantum_simulation_basics.doctree
_sources/: Circuit.ipynb  example_notebook.ipynb  example_notebook.md  local-hello-world-qiskit-ionq.md  project_introduction.ipynb
docs/: _config.yml  _toc.yml  intro.md
html/: Circuit.html  genindex.html  intro.html  objects.inv  project_introduction.html  search.html  searchindex.js
html/_sources/: intro.md  local-hello-world-qiskit-ionq.ipynb  project_introduction.ipynb  quantum_simulation_basics.ipynb
jupyter_execute/: Circuit.ipynb  Circuit.py  example_notebook.ipynb  example_notebook.py  local-hello-world-qiskit-ionq.ipynb  local-hello-world-qiskit-ionq.py  project_introduction.ipynb  project_introduction.py  quantum_simulation_basics.ipynb  quantum_simulation_basics.py
md_notebooks/: AndersonLocalization.md  Circuit.md  example_notebook.md  project_introduction.md  quantum_simulation_basics.md
