[tool.poetry]
name = "nqn-hackathon-2023"
version = "0.1.0"
description = ""
authors = [
  "Garrett Compton <garrett.compton@wsu.edu>",
  "Edward Eskew <edward.eskew@wsu.edu>",
  "Saptarshi Sarkar <saptarshi.sarkar@wsu.edu>",
  "Kartik Sreedhar <kartik.sreedhar@wsu.edu>",
]
readme = "README.md"
packages = [{include = "nqn_hackathon_2023", from = "src"}]

[tool.poetry.dependencies]
python = "^3.9"
jupyter = "^1.0.0"
jupytext = "^1.14.4"
matplotlib = "^3.6.3"
numpy = "^1.24.1"
qiskit = "^0.39.5"

[tool.poetry.group.dev.dependencies]
black = {extras = ["jupyter"], version = "^22.12.0"}
pre-commit = "^2.21.0"

[tool.jupytext]
formats = "notebooks///ipynb,md_notebooks///md"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
