[tool.poetry]
name = "nqn-hackathon-2023"
version = "0.1.0"
description = ""
authors = [
  "Garrett Compton <garrett.compton@wsu.edu>",
  "Edward Eskew <edward.eskew@wsu.edu>",
  "Saptarshi Sarkar <saptarshi.sarkar@wsu.edu>",
  "Kartik Sreedhar <kartik.sreedhar@wsu.edu>",
]
readme = "README.md"
packages = [{include = "nqn_hackathon_2023", from = "src"}]

[tool.poetry.dependencies]
python = "^3.9"
poetry = "1.2.2"  # Ensures poetry knows we've installed it into this environment (via conda)
jupyter = "^1.0.0"
jupytext = "^1.14.4"
matplotlib = "^3.6.3"
numpy = "^1.24.1"
qiskit = {extras = ["nature", "visualization"], version = "^0.39.5"}
debugpy = "!=1.6.5"

[tool.poetry.group.docs]
optional = true

[tool.poetry.group.docs.dependencies]
jupyter-book = {git = "https://github.com/executablebooks/jupyter-book.git", rev = "795c4b5c351618d4338b94620afc06c6ab54f148"}
ghp-import = "^2.1.0"

[tool.poetry.group.dev.dependencies]
black = {extras = ["jupyter"], version = "^22.12.0"}
pre-commit = "^2.21.0"

[tool.jupytext]
formats = "notebooks///ipynb,md_notebooks///md"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
